<resources>
    <string name="app_name">Czas  na lek</string>
    <string name="settings">Ustawienia</string>
    <string name="take_drag">Weź lek</string>
    <string name="remaining_time">Pozostały czas:</string>
    <string name="intervalSize">Wielkość interwału:</string>
    <string name="save">Zapisz</string>
    <string name="hour">godzina</string>
    <string name="minutes">minuty</string>
    <string name="seconds">sekundy</string>
    <string name="settingsPreferences">settingPreferences</string>
    <string name="timeForDrag">Czas na lek!</string>
    <string name="reset">Reset</string>
    <string name="statistic">Statystyki</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="details">Szczegóły</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">nazwa</string>
    <string name="add">dodaj</string>
    <string name="edit">Edytuj</string>
    <string name="DeleteDrug">Usuń lek</string>
</resources>