<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRemainigTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/labTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" 00:00"
                android:textSize="18sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/timeProgressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="29dip"
            android:max="100" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnStac"
            android:layout_width="@dimen/btnDetailsWidth"
            android:layout_height="46dip"
            android:backgroundTint="#4EADD8"
            android:onClick="onStac"
            android:text="@string/statistic" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="@dimen/btnDetailsWidth"
            android:layout_height="46dip"
            android:layout_marginTop="@dimen/btnDetailsMargins"
            android:backgroundTint="#65C151"
            android:onClick="onReset"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="@dimen/btnDetailsWidth"
            android:layout_height="46dip"
            android:layout_marginTop="@dimen/btnDetailsMargins"
            android:backgroundTint="#CDDC39"
            android:onClick="onSettings"
            android:text="@string/settings" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/btnDetailsWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnDetailsMargins"
            android:backgroundTint="#E91E63"
            android:onClick="onDeleteDrug"
            android:text="@string/DeleteDrug" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>